fix styles again, remove opening text, hide opoening content window on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,7 +53,7 @@ body{
     height: 100vh;
     margin: 0;
     background: url('/assets/img/Anden-51.jpg') center / cover no-repeat, rgba(0,0,0,1);
-    filter: blur(17px) brightness(49%) grayscale(100%) hue-rotate(360deg) sepia(29%);
+    filter: blur(0px) brightness(75%);
 }
 #name{
     z-index: 2;
@@ -72,19 +72,21 @@ body{
 #deskContentBlock{
     z-index: 3;
     margin-left: -80vw;
-    width: 80vw;
+    width: 40vw;
     height: 100vh;
     display: flex;
-    align-items: center;
+    align-items: left;
     justify-content: center;
     font-family: monospace;
     flex-direction: column;
 }
 #deskContentBlock h1{
     font-size: 40px;
+    margin-left: 25px
 }
 #deskContentBlock p{
     font-size: 16px;
+    margin: 10px 25px;
 }
 
 @media (max-width: 1400px) {
@@ -264,6 +266,14 @@ body{
     }
     #deskPage{
         display: none;
+    }
+    @media (max-width: 400px){
+        #mobileNav{
+            font-size: 10px;
+        }
+        #mobileNavToggle{
+            font-size: 18px;
+        }
     }
 }
 @media (max-height: 400px){
